--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "server": "nodemon index.js",
     "client": "PORT=3001 npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client"
   },
   "author": "Konstantin Anissimov",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
