--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "highcharts": "^5.0.14",
+    "immutable": "^3.8.2",
     "materialize-css": "^0.100.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-jsx-highcharts": "^2.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
