--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
     "express": "^4.16.1",
+    "express-force-ssl": "^0.3.2",
     "mongoose": "^4.12.1",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
