--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "highcharts": "^6.0.1",
     "materialize-css": "^0.100.2",
     "react": "^16.0.0",
+    "react-beautiful-dnd": "^2.4.1",
     "react-dom": "^16.0.0",
     "react-highcharts": "^13.0.0",
     "react-redux": "^5.0.6",
